--- a/gestionEvenement/src/main/resources/gui/listEvenementFront.fxml
+++ b/gestionEvenement/src/main/resources/gui/listEvenementFront.fxml
@@ -11,17 +11,17 @@
 
 <AnchorPane id="AnchorPane" fx:id="listEvenementFront" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.listEvenementFrontController">
     <children>
-        <Label layoutX="59.0" layoutY="138.0" text="Nos Evenements" textFill="#2c234d">
+        <Label layoutX="57.0" layoutY="205.0" text="Nos Evenements" textFill="#2c234d">
             <font>
                 <Font name="System Bold" size="36.0" />
             </font>
         </Label>
-        <Label layoutX="59.0" layoutY="76.0" text="NOS SERVICES POUR VOUS" textFill="#f04e3c">
+        <Label layoutX="237.0" layoutY="38.0" prefHeight="67.0" prefWidth="600.0" style="-fx-background-color: d41c1c;" text="                                         NOS SERVICES POUR VOUS" textFill="WHITE">
             <font>
-                <Font size="14.0" />
+                <Font name="System Bold" size="21.0" />
             </font>
         </Label>
-        <Label layoutX="57.0" layoutY="93.0" text="Vous pouvez consulter" textFill="#2c234d">
+        <Label layoutX="57.0" layoutY="139.0" text="Vous pouvez consulter" textFill="#2c234d">
             <font>
                 <Font name="System Bold" size="36.0" />
             </font>
