--- a/src/main/resources/Affichageutilisateurs.fxml
+++ b/src/main/resources/Affichageutilisateurs.fxml
@@ -13,9 +13,9 @@
 
 <AnchorPane prefHeight="507.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.Affichageutilisateurs">
    <children>
-      <AnchorPane prefHeight="105.0" prefWidth="1200.0" style="-fx-background-color: #cc5a12;">
+      <AnchorPane prefHeight="105.0" prefWidth="1200.0" style="-fx-background-color: #960000;">
          <children>
-            <ImageView fitHeight="103.0" fitWidth="141.0" layoutX="806.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="103.0" fitWidth="141.0" layoutX="1067.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
                </image>
@@ -56,13 +56,5 @@
             </Button>
          </children>
       </AnchorPane>
-      <TextField fx:id="ftnom" layoutX="779.0" layoutY="248.0" promptText="Nom" />
-      <TextField fx:id="ftprenom" layoutX="779.0" layoutY="297.0" promptText="Prenom" />
-      <TextField fx:id="ftemail" layoutX="779.0" layoutY="348.0" promptText="Email" />
-      <Button layoutX="813.0" layoutY="409.0" mnemonicParsing="false" onAction="#MODIFIER" text="MODIFIER">
-         <font>
-            <Font name="Algerian" size="14.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
