--- a/src/main/resources/AjoutClient.fxml
+++ b/src/main/resources/AjoutClient.fxml
@@ -12,7 +12,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.AjoutClient">
     <children>
         <AnchorPane layoutX="97.0" layoutY="104.0" opacity="0.18" prefHeight="314.0" prefWidth="450.0" style="-fx-background-color: #cc5a12;" />
-        <ImageView fitHeight="439.0" fitWidth="714.0" layoutX="-18.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="581.0" fitWidth="939.0" layoutX="-141.0" pickOnBounds="true" preserveRatio="true">
             <image>
             </image>
         </ImageView>
@@ -24,7 +24,7 @@
             <font>
                 <Font name="Algerian" size="13.0" />
             </font></Button>
-        <AnchorPane prefHeight="78.0" prefWidth="671.0" style="-fx-background-color: #cc5a12;">
+        <AnchorPane layoutX="-6.0" prefHeight="99.0" prefWidth="690.0" style="-fx-background-color: #960000;">
             <children>
                 <Label layoutX="279.0" layoutY="19.0" text="SIGN IN" underline="true">
                     <font>
@@ -43,7 +43,7 @@
                 <Image url="@images/nourriture.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="129.0" fitWidth="99.0" layoutX="550.0" layoutY="284.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="129.0" fitWidth="99.0" layoutX="377.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@images/programmeur.png" />
             </image>
