--- a/src/main/resources/Ajoututilisateurs.fxml
+++ b/src/main/resources/Ajoututilisateurs.fxml
@@ -9,10 +9,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.Ajoututilisateurs">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="809.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.Ajoututilisateurs">
    <children>
       <AnchorPane layoutX="97.0" layoutY="104.0" opacity="0.18" prefHeight="314.0" prefWidth="450.0" style="-fx-background-color: #cc5a12;" />
-      <ImageView fitHeight="439.0" fitWidth="714.0" layoutX="-18.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="564.0" fitWidth="714.0" layoutX="-18.0" pickOnBounds="true" preserveRatio="true">
          <image>
          </image>
       </ImageView>
@@ -24,26 +24,26 @@
          <font>
             <Font name="Algerian" size="13.0" />
          </font></Button>
-      <AnchorPane prefHeight="78.0" prefWidth="671.0" style="-fx-background-color: #cc5a12;">
+      <AnchorPane layoutY="-22.0" prefHeight="112.0" prefWidth="809.0" style="-fx-background-color: #960000;">
          <children>
-            <Label layoutX="279.0" layoutY="19.0" text="SIGN IN" underline="true">
+            <Label layoutX="310.0" layoutY="41.0" prefHeight="39.0" prefWidth="280.0" text="SIGN IN" textFill="#1e1d1d" underline="true">
                <font>
                   <Font name="Algerian" size="34.0" />
                </font>
             </Label>
-            <ImageView fitHeight="99.0" fitWidth="113.0" layoutX="572.0" layoutY="-10.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="99.0" fitWidth="137.0" layoutX="696.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
-      <ImageView fitHeight="74.0" fitWidth="99.0" layoutX="14.0" layoutY="362.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="74.0" fitWidth="99.0" layoutX="23.0" layoutY="476.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/nourriture.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="129.0" fitWidth="99.0" layoutX="550.0" layoutY="284.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="129.0" fitWidth="99.0" layoutX="647.0" layoutY="312.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/programmeur.png" />
          </image>
