--- a/src/main/resources/ModifierProfil.fxml
+++ b/src/main/resources/ModifierProfil.fxml
@@ -11,6 +11,12 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.ModifierProfil">
 
    <children>
+      <ImageView fitHeight="26.0" fitWidth="42.0" layoutX="422.0" layoutY="376.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/poubelle.gif" />
+         </image>
+      </ImageView>
+      <AnchorPane layoutX="149.0" layoutY="109.0" opacity="0.18" prefHeight="327.0" prefWidth="355.0" style="-fx-background-color: #cc5a12;" />
       <ImageView fitHeight="443.0" fitWidth="735.0" layoutX="-3.0" pickOnBounds="true" preserveRatio="true">
          <image>
          </image>
@@ -19,7 +25,7 @@
       <TextField fx:id="ftemail" layoutX="236.0" layoutY="323.0" />
       <TextField fx:id="ftmot_de_passe" layoutX="239.0" layoutY="274.0" />
       <TextField fx:id="ftprenom" layoutX="240.0" layoutY="209.0" />
-      <Button layoutX="265.0" layoutY="371.0" mnemonicParsing="false" onAction="#modifier" prefHeight="37.0" prefWidth="98.0" text="Modifier" textFill="#0b0a20">
+      <Button layoutX="187.0" layoutY="370.0" mnemonicParsing="false" onAction="#modifier" prefHeight="37.0" prefWidth="98.0" text="Modifier" textFill="#0b0a20">
          <font>
             <Font name="Algerian" size="15.0" />
          </font></Button>
@@ -27,7 +33,7 @@
       <Label layoutX="240.0" layoutY="191.0" text="Prenom" />
       <Label layoutX="239.0" layoutY="300.0" prefHeight="18.0" prefWidth="42.0" text="Email" />
       <Label layoutX="240.0" layoutY="248.0" text="Mot de Passe" />
-      <AnchorPane prefHeight="82.0" prefWidth="735.0" style="-fx-background-color: #cc5a12;">
+      <AnchorPane prefHeight="82.0" prefWidth="735.0" style="-fx-background-color: #960000;">
          <children>
             <ImageView fitHeight="98.0" fitWidth="150.0" layoutX="614.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -44,6 +50,16 @@
       <ImageView fitHeight="49.0" fitWidth="71.0" layoutX="14.0" layoutY="384.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/nourriture.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="314.0" layoutY="369.0" mnemonicParsing="false" onAction="#supprimer" prefHeight="38.0" prefWidth="100.0" text="SUPPRIMER">
+         <font>
+            <Font name="Algerian" size="15.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="108.0" fitWidth="150.0" layoutX="559.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/profil.gif" />
          </image>
       </ImageView>
    </children>
