--- a/workshopjdbc/src/main/resources/AfficherMenu.fxml
+++ b/workshopjdbc/src/main/resources/AfficherMenu.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
@@ -15,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1430.0" styleClass="bgProductsAdmin" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controles.AfficherCtegorieControllers">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1430.0" styleClass="bgProductsAdmin" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controles.AfficherMenu">
     <children>
         <ImageView fitHeight="40.0" fitWidth="308.0" layoutX="511.0" layoutY="12.0">
 
@@ -56,7 +57,21 @@
                                 <TextField fx:id="des_plat" />
                             </children>
                         </VBox>
-                  <Button mnemonicParsing="false" onAction="#afficher_menu" text="Afficher Menu" />
+                        <HBox alignment="CENTER" prefHeight="49.0" prefWidth="237.0">
+                            <children>
+                                <Label fx:id="prix" text="Prix">
+                                    <HBox.margin>
+                                        <Insets left="10.0" />
+                                    </HBox.margin>
+                                </Label>
+                                <TextField fx:id="prix_plat" prefHeight="26.0" prefWidth="154.0" />
+                            </children>
+                        </HBox>
+                        <VBox alignment="CENTER" prefHeight="73.0" prefWidth="237.0">
+                            <children>
+                                <HBox alignment="CENTER" prefHeight="33.0" prefWidth="237.0" />
+                            </children>
+                        </VBox>
                     </children>
                 </VBox>
             </right>
@@ -66,7 +81,7 @@
                         <Insets bottom="125.0" left="45.0" right="65.0" top="75.0" />
                     </BorderPane.margin>
                     <content>
-                        <GridPane fx:id="grid" prefHeight="65.0" prefWidth="39.0">
+                        <GridPane fx:id="grid" prefHeight="125.0" prefWidth="114.0">
                             <rowConstraints>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" />
                             </rowConstraints>
@@ -77,10 +92,19 @@
             <top>
                 <HBox alignment="CENTER" prefHeight="58.0" prefWidth="1430.0" BorderPane.alignment="CENTER">
                     <children>
+                        <TextField fx:id="searchInput" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="24.0" prefWidth="232.0" promptText="Search..." styleClass="transparent" />
 
 
-                        <Pane prefHeight="58.0" prefWidth="83.0" />
-                  <TextField fx:id="Chercher" prefHeight="26.0" prefWidth="300.0" />
+                        <Pane prefHeight="58.0" prefWidth="83.0">
+                            <children>
+                                <ChoiceBox fx:id="filtreOptions" layoutX="20.0" layoutY="11.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="47.0">
+                                    <styleClass>
+                                        <String fx:value="filtre" />
+                                        <String fx:value="transparent" />
+                                    </styleClass>
+                                </ChoiceBox>
+                            </children>
+                        </Pane>
                     </children>
                 </HBox>
             </top>
