--- a/src/main/resources/AcceuilLivreur.fxml
+++ b/src/main/resources/AcceuilLivreur.fxml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="578.0" prefWidth="861.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.AcceuilAdmin">
@@ -18,25 +14,7 @@
             <Image url="@images/Capture%20d'écran%202024-02-29%20234523.png" />
          </image>
       </ImageView>
-      <Button layoutX="103.0" layoutY="401.0" mnemonicParsing="false" onAction="#affichageliste" style="-fx-background-color: transparent;" text="AFFICHAGE LISTE UTILISATEURS" underline="true">
-         <textFill>
-            <LinearGradient endX="1.0" endY="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </textFill>
-      </Button>
-      <Label layoutX="326.0" layoutY="14.0" prefHeight="62.0" prefWidth="175.0" text="HELLO ADMIN">
+      <Label layoutX="326.0" layoutY="14.0" prefHeight="62.0" prefWidth="219.0" text="HELLO LIVREUR">
          <font>
             <Font name="Cooper Black" size="23.0" />
          </font>
