--- a/src/main/resources/Affichageutilisateurs.fxml
+++ b/src/main/resources/Affichageutilisateurs.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,11 +12,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="507.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.Affichageutilisateurs">
+<AnchorPane prefHeight="555.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.Affichageutilisateurs">
    <children>
-      <AnchorPane prefHeight="105.0" prefWidth="1200.0" style="-fx-background-color: #960000;">
+      <AnchorPane prefHeight="110.0" prefWidth="806.0" style="-fx-background-color: #960000;">
          <children>
-            <ImageView fitHeight="103.0" fitWidth="141.0" layoutX="1067.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="103.0" fitWidth="141.0" layoutX="617.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
                </image>
@@ -23,7 +24,7 @@
                   <Blend />
                </effect>
             </ImageView>
-            <Label layoutX="319.0" layoutY="23.0" prefHeight="40.0" prefWidth="314.0" text="Affichage Utilisateurs" textFill="#2b2727" underline="true">
+            <Label layoutX="246.0" layoutY="29.0" prefHeight="40.0" prefWidth="314.0" text="Affichage Utilisateurs" textFill="#2b2727" underline="true">
                <font>
                   <Font name="Algerian" size="22.0" />
                </font>
@@ -31,7 +32,7 @@
          </children>
       </AnchorPane>
       <Label layoutX="123.0" layoutY="243.0" />
-      <TableView fx:id="tabutilisateurs" layoutX="79.0" layoutY="208.0" prefHeight="306.0" prefWidth="581.0">
+      <TableView fx:id="tabutilisateurs" layoutX="14.0" layoutY="204.0" prefHeight="306.0" prefWidth="581.0">
         <columns>
           <TableColumn fx:id="Nom" prefWidth="75.0" text="NOM" />
             <TableColumn fx:id="Prenom" prefWidth="93.60003662109375" text="PRENOM" />
@@ -46,15 +47,45 @@
          </image>
       </ImageView>
       <ImageView fitHeight="32.0" fitWidth="177.0" layoutX="628.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true" />
-      <AnchorPane layoutX="231.0" layoutY="123.0" prefHeight="70.0" prefWidth="345.0">
+      <AnchorPane layoutX="165.0" layoutY="118.0" prefHeight="70.0" prefWidth="345.0">
          <children>
-            <TextField fx:id="searchinput" layoutX="27.0" layoutY="17.0" prefHeight="32.0" prefWidth="222.0" promptText="Search" />
-            <Button layoutX="253.0" layoutY="20.0" mnemonicParsing="false" onAction="#recherche" text="Search">
+            <TextField fx:id="searchinput" layoutX="27.0" layoutY="17.0" prefHeight="32.0" prefWidth="274.0" promptText="Search" />
+            <Button layoutX="233.0" layoutY="17.0" mnemonicParsing="false" onAction="#recherche" prefHeight="32.0" prefWidth="88.0" style="-fx-background-color: transparent;">
                <font>
                   <Font name="Algerian" size="13.0" />
                </font>
+               <graphic>
+                  <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/Capture%20d'écran%202024-03-04%20221045.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
          </children>
       </AnchorPane>
+      <Button layoutX="26.0" layoutY="137.0" mnemonicParsing="false" onAction="#OnAdd" prefHeight="32.0" prefWidth="118.0" text="NEW">
+         <font>
+            <Font name="Algerian" size="13.0" />
+         </font>
+      </Button>
+      <Button layoutX="663.0" layoutY="132.0" mnemonicParsing="false" onAction="#OnSort" prefHeight="32.0" prefWidth="118.0" text="Sort Table">
+         <font>
+            <Font name="Algerian" size="13.0" />
+         </font>
+      </Button>
+      <ComboBox fx:id="FilterComboBox" layoutX="521.0" layoutY="132.0" prefHeight="32.0" prefWidth="133.0" />
+      <Button layoutX="628.0" layoutY="325.0" mnemonicParsing="false" onAction="#OnExport" prefHeight="32.0" prefWidth="134.0" style="-fx-background-color: transaprent;">
+         <font>
+            <Font name="Algerian" size="13.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="78.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/Capture%20d'écran%202024-03-04%20220636.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
