--- a/src/main/resources/Ajoututilisateurs.fxml
+++ b/src/main/resources/Ajoututilisateurs.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -9,52 +12,41 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="809.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.Ajoututilisateurs">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="394.0" prefWidth="382.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.Ajoututilisateurs">
    <children>
-      <AnchorPane layoutX="97.0" layoutY="104.0" opacity="0.18" prefHeight="314.0" prefWidth="450.0" style="-fx-background-color: #cc5a12;" />
-      <ImageView fitHeight="564.0" fitWidth="714.0" layoutX="-18.0" pickOnBounds="true" preserveRatio="true">
+      <AnchorPane layoutY="-2.0" prefHeight="92.0" prefWidth="382.0" style="-fx-background-color: #960000;" />
+      <ImageView fitHeight="162.0" fitWidth="706.0" layoutX="-18.0" layoutY="-70.0" pickOnBounds="true" preserveRatio="true">
          <image>
          </image>
       </ImageView>
-      <TextField fx:id="ftnom" layoutX="145.0" layoutY="174.0" promptText="nom" />
-      <TextField fx:id="ftprenom" layoutX="145.0" layoutY="218.0" promptText="prenom" />
-      <TextField fx:id="ftemail" layoutX="145.0" layoutY="308.0" promptText="email" />
-      <Label layoutX="213.0" layoutY="141.0" />
-      <Button layoutX="178.0" layoutY="385.0" mnemonicParsing="false" onAction="#sinscrire" prefHeight="26.0" prefWidth="84.0" text="S'inscrire" textFill="#382716">
+      <Label layoutX="121.0" layoutY="24.0" prefHeight="39.0" prefWidth="182.0" text="Add Users" textFill="#1e1d1d" underline="true">
+         <font>
+            <Font name="Algerian" size="34.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="99.0" fitWidth="137.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
+         </image>
+      </ImageView>
+      <AnchorPane layoutX="67.0" layoutY="103.0" opacity="0.18" prefHeight="261.0" prefWidth="271.0" style="-fx-background-color: #cc5a12;" />
+      <TextField fx:id="ftnom" layoutX="121.0" layoutY="237.0" promptText="nom" />
+      <TextField fx:id="ftprenom" layoutX="121.0" layoutY="207.0" promptText="prenom" />
+      <TextField fx:id="ftemail" layoutX="121.0" layoutY="173.0" promptText="email" />
+      <ComboBox fx:id="ftroleBox" layoutX="162.0" layoutY="138.0" promptText="role">
+         <items>
+            <FXCollections fx:factory="observableArrayList">
+               <String fx:value="Client" />
+               <String fx:value="Admin" />
+               <String fx:value="Livreur" />
+            </FXCollections>
+         </items>
+      </ComboBox>
+      <PasswordField fx:id="ftmot_de_passe" layoutX="121.0" layoutY="274.0" />
+      <Button layoutX="161.0" layoutY="317.0" mnemonicParsing="false" onAction="#sinscrire" prefHeight="26.0" prefWidth="84.0" text="Add User" textFill="#382716">
          <font>
             <Font name="Algerian" size="13.0" />
-         </font></Button>
-      <AnchorPane layoutY="-22.0" prefHeight="112.0" prefWidth="809.0" style="-fx-background-color: #960000;">
-         <children>
-            <Label layoutX="310.0" layoutY="41.0" prefHeight="39.0" prefWidth="280.0" text="SIGN IN" textFill="#1e1d1d" underline="true">
-               <font>
-                  <Font name="Algerian" size="34.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="99.0" fitWidth="137.0" layoutX="696.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
-               </image>
-            </ImageView>
-         </children>
-      </AnchorPane>
-      <ImageView fitHeight="74.0" fitWidth="99.0" layoutX="23.0" layoutY="476.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/nourriture.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="129.0" fitWidth="99.0" layoutX="647.0" layoutY="312.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/programmeur.png" />
-         </image>
-      </ImageView>
-      <Button layoutX="382.0" layoutY="367.0" mnemonicParsing="false" onAction="#login" text="login">
-         <font>
-            <Font name="Algerian" size="11.0" />
          </font>
       </Button>
-      <TextField fx:id="ftrole" layoutX="145.0" layoutY="353.0" promptText="role" />
-      <Label layoutX="339.0" layoutY="344.0" text="Already have an account" />
-      <PasswordField fx:id="ftmot_de_passe" layoutX="146.0" layoutY="261.0" />
    </children>
 </AnchorPane>
