--- a/src/main/resources/AjoutMenu.fxml
+++ b/src/main/resources/AjoutMenu.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -36,6 +37,7 @@
                   <Font name="Cooper Black" size="12.0" />
                </font>
             </Button>
+            <ListView fx:id="Listnomcat" layoutX="129.0" layoutY="227.0" prefHeight="50.0" prefWidth="150.0" />
          </children></AnchorPane>
       <Label layoutX="43.0" layoutY="197.0" prefHeight="18.0" prefWidth="47.0" text="nom" textFill="#181816">
          <font>
@@ -61,7 +63,6 @@
          <font>
             <Font name="Algerian" size="11.0" />
          </font></Label>
-      <TextField fx:id="ftnomcategorie" layoutX="150.0" layoutY="387.0" />
       <TableView fx:id="tabplat" layoutX="381.0" layoutY="189.0" prefHeight="200.0" prefWidth="530.0">
         <columns>
           <TableColumn fx:id="tvnom" prefWidth="68.0" text="nom" />
