--- a/src/main/resources/AjoutZone.fxml
+++ b/src/main/resources/AjoutZone.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -86,5 +87,8 @@
          </font>
       </Label>
       <TextField fx:id="ftdescription" layoutX="67.0" layoutY="337.0" prefHeight="74.0" prefWidth="223.0" stylesheets="@css/style.css" />
+      <Button layoutX="805.0" layoutY="92.0" mnemonicParsing="false" onAction="#filterButton" stylesheets="@css/style.css" text="trier par:" />
+      <ComboBox fx:id="comboxZone" layoutX="885.0" layoutY="92.0" prefHeight="26.0" prefWidth="106.0" />
+      <Button layoutX="194.0" layoutY="92.0" mnemonicParsing="false" onAction="#ai_generator" prefHeight="26.0" prefWidth="106.0" text="Generate AI" />
    </children>
 </AnchorPane>
