--- a/src/main/resources/Tables.fxml
+++ b/src/main/resources/Tables.fxml
@@ -62,6 +62,11 @@
       </ImageView>
       <ListView fx:id="nomlistview" layoutX="108.0" layoutY="222.0" prefHeight="88.0" prefWidth="200.0" />
       <Button fx:id="PDFtable" layoutX="871.0" layoutY="171.0" mnemonicParsing="false" onAction="#PDFtable" opacity="0.0" prefHeight="64.0" prefWidth="56.0" stylesheets="@css/style.css" text="PDF" />
-      <TextField fx:id="Recherche" layoutX="430.0" layoutY="123.0" onKeyTyped="#searche" prefHeight="26.0" prefWidth="406.0" promptText="Recherche" />
+      <TextField fx:id="Recherche" layoutX="461.0" layoutY="123.0" onKeyTyped="#searche" prefHeight="26.0" prefWidth="375.0" promptText="Recherche" />
+      <ImageView fitHeight="26.0" fitWidth="32.0" layoutX="430.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/rechercher-removebg-preview.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
