--- a/src/main/resources/Tables.fxml
+++ b/src/main/resources/Tables.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TableColumn?>
@@ -68,5 +69,7 @@
             <Image url="@images/rechercher-removebg-preview.png" />
          </image>
       </ImageView>
+      <ComboBox fx:id="comboTable" layoutX="235.0" layoutY="123.0" prefHeight="26.0" prefWidth="113.0" />
+      <Button layoutX="152.0" layoutY="124.0" mnemonicParsing="false" onAction="#trier" text="Trier par:" />
    </children>
 </AnchorPane>
