--- a/gestionEvenement/src/main/resources/gui/addEvenement.fxml
+++ b/gestionEvenement/src/main/resources/gui/addEvenement.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="addEvenementPane" prefHeight="588.0" prefWidth="794.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.addEvenementController">
+<AnchorPane fx:id="addEvenementPane" prefHeight="588.0" prefWidth="794.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.addEvenementController">
     <stylesheets>
         <URL value="@hello-view.css" />
     </stylesheets>
@@ -44,6 +44,11 @@
       <Button fx:id="btnImport" layoutX="399.0" layoutY="300.0" mnemonicParsing="false" onAction="#ajouterImage" prefHeight="26.0" prefWidth="78.0" styleClass="import-btn" stylesheets="@hello-view.css" text="Upload" />
       <Label layoutX="306.0" layoutY="304.0" prefHeight="18.0" prefWidth="86.0" text="Choisir l'image" />
       <ImageView fx:id="imageInput" fitHeight="72.0" fitWidth="172.0" layoutX="304.0" layoutY="336.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="90.0" fitWidth="128.0" layoutX="642.0" layoutY="8.0">
+         <image>
+            <Image url="@../../../../../../../Desktop/image/418025501_916964343338013_8117190284543088009_n.png" />
+         </image>
+      </ImageView>
         
     </children>
 </AnchorPane>
