--- a/gestionEvenement/src/main/resources/gui/gestionReservation.fxml
+++ b/gestionEvenement/src/main/resources/gui/gestionReservation.fxml
@@ -2,20 +2,27 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="gestionReservation" prefHeight="508.0" prefWidth="964.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.gestionReservationController">
 
     <children>
-        <Button fx:id="btnListe" layoutX="258.0" layoutY="294.0" mnemonicParsing="false" onAction="#open_listReservation" prefHeight="46.0" prefWidth="183.0" styleClass="btn" stylesheets="@hello-view.css" text="show Reservation" />
-        <Button fx:id="btnAdd" layoutX="521.0" layoutY="294.0" mnemonicParsing="false" onAction="#open_addReservation" prefHeight="46.0" prefWidth="183.0" styleClass="btn" stylesheets="@hello-view.css" text="ADD reservation" />
-      <Label layoutY="72.0" prefHeight="100.0" prefWidth="964.0" style="-fx-background-color: d41c1c;" textFill="#d41c1c" />
-        <Label layoutX="300.0" layoutY="82.0" prefHeight="78.0" prefWidth="387.0" style="-fx-alignment: CENTER; -fx-font-family: Tahoma; -fx-font-size: 40px;" text="Gestion Reservations" textAlignment="CENTER" textFill="WHITE">
+        <Button fx:id="btnListe" layoutX="258.0" layoutY="276.0" mnemonicParsing="false" onAction="#open_listReservation" prefHeight="64.0" prefWidth="183.0" styleClass="btn" stylesheets="@hello-view.css" text="show Reservation" />
+        <Button fx:id="btnAdd" layoutX="521.0" layoutY="276.0" mnemonicParsing="false" onAction="#open_addReservation" prefHeight="64.0" prefWidth="193.0" styleClass="btn" stylesheets="@hello-view.css" text="ADD reservation" />
+      <Label prefHeight="97.0" prefWidth="954.0" style="-fx-background-color: d41c1c;" textFill="#d41c1c" />
+        <Label layoutX="288.0" layoutY="4.0" prefHeight="78.0" prefWidth="387.0" style="-fx-alignment: CENTER; -fx-font-family: Tahoma; -fx-font-size: 40px;" text="Gestion Reservations" textAlignment="CENTER" textFill="WHITE">
             <font>
                 <Font size="34.0" />
             </font>
         </Label>
+      <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="779.0" layoutY="-51.0">
+         <image>
+            <Image url="@../../../../../../../Desktop/image/418025501_916964343338013_8117190284543088009_n.png" />
+         </image>
+      </ImageView>
 
     </children>
 
