--- a/gestionEvenement/src/main/resources/gui/hello-view.fxml
+++ b/gestionEvenement/src/main/resources/gui/hello-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.HelloController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.HelloController">
 <children>
     <AnchorPane prefHeight="200.0" prefWidth="200.0">
         <children>
@@ -78,7 +78,14 @@
                 <center>
                     <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="757.0" prefWidth="1233.0" BorderPane.alignment="CENTER">
                         <children>
-                            <AnchorPane fx:id="viewPages" layoutX="224.0" layoutY="134.0" prefHeight="760.0" prefWidth="1234.0" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                            <AnchorPane fx:id="viewPages" layoutX="14.0" layoutY="-32.0" prefHeight="760.0" prefWidth="1234.0" AnchorPane.bottomAnchor="30.399999999999977" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="-14.0" AnchorPane.topAnchor="-32.0">
+                           <children>
+                              <ImageView fitHeight="133.0" fitWidth="134.0" layoutX="518.0" layoutY="14.0">
+                                 <image>
+                                    <Image url="@../../../../../../../Desktop/image/418025501_916964343338013_8117190284543088009_n.png" />
+                                 </image>
+                              </ImageView>
+                           </children></AnchorPane>
                         </children>
                     </AnchorPane>
                 </center>
