--- a/gestionEvenement/src/main/resources/gui/listEvenementFront.fxml
+++ b/gestionEvenement/src/main/resources/gui/listEvenementFront.fxml
@@ -3,6 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Pagination?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -46,5 +48,10 @@
                 </HBox>
             </children>
         </HBox>
+      <ImageView fitHeight="115.0" fitWidth="145.0" layoutX="22.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/iiiiii.png" />
+         </image>
+      </ImageView>
     </children>
 </AnchorPane>
