metier +api commit8

--- a/src/main/resources/ForgetPassword.fxml
+++ b/src/main/resources/ForgetPassword.fxml
@@ -8,21 +8,27 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="535.0" prefWidth="706.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.forgetPasswordController">
+<AnchorPane prefHeight="608.0" prefWidth="872.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.forgetPasswordController">
    <children>
-      <ImageView fitHeight="98.0" fitWidth="113.0" layoutX="647.0" layoutY="262.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="84.0" fitWidth="58.0" layoutX="23.0" layoutY="536.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/Capture%20d'écran%202024-03-06%20150938.png" />
+         </image>
+      </ImageView>
+      <AnchorPane layoutX="148.0" layoutY="111.0" opacity="0.19" prefHeight="438.0" prefWidth="494.0" style="-fx-background-color: #cc5a12;" />
+      <ImageView fitHeight="98.0" fitWidth="113.0" layoutX="733.0" layoutY="371.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/mot-de-passe.gif" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="-2.0" layoutY="-4.0" prefHeight="96.0" prefWidth="784.0" style="-fx-background-color: #960000;">
+      <AnchorPane layoutX="-1.0" prefHeight="98.0" prefWidth="872.0" style="-fx-background-color: #960000;">
          <children>
             <Label layoutX="216.0" layoutY="31.0" text="MOT DE PASSE OUBLIE" underline="true">
                <font>
                   <Font name="Cooper Black" size="29.0" />
                </font>
             </Label>
-            <ImageView fitHeight="97.0" fitWidth="200.0" layoutX="673.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="97.0" fitWidth="200.0" layoutX="765.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
                </image>
@@ -39,7 +45,7 @@
             <Font name="Algerian" size="21.0" />
          </font>
       </Button>
-      <Button layoutX="14.0" layoutY="475.0" mnemonicParsing="false" onAction="#goBackToLogin" prefHeight="42.0" prefWidth="134.0" styleClass="AjouterUtilisateur" text="Retour" textFill="#363333">
+      <Button layoutX="14.0" layoutY="542.0" mnemonicParsing="false" onAction="#goBackToLogin" prefHeight="42.0" prefWidth="91.0" style="-fx-background-color: transparent;" styleClass="AjouterUtilisateur" textFill="#363333">
          <font>
             <Font name="Algerian" size="18.0" />
          </font>
