--- a/sushimia/sushimia/src/main/resources/login.fxml
+++ b/sushimia/sushimia/src/main/resources/login.fxml
@@ -11,24 +11,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="542.0" prefWidth="844.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.Login">
+<AnchorPane prefHeight="440.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.esprit.controllers.Login">
    <children>
+      <AnchorPane layoutX="37.0" layoutY="134.0" opacity="0.42" prefHeight="281.0" prefWidth="514.0" style="-fx-background-color: #d9b336;" />
+      <PasswordField fx:id="ftmot_de_passe" layoutX="141.0" layoutY="265.0" />
       <ImageView fitHeight="35.0" fitWidth="19.0" layoutX="296.0" layoutY="269.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/eye-clipart-transparent.png" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="37.0" layoutY="134.0" opacity="0.42" prefHeight="363.0" prefWidth="380.0" style="-fx-background-color: #d9b336;">
-         <children>
-            <Label fx:id="captchaLabel" layoutX="102.0" layoutY="194.0" prefHeight="39.0" prefWidth="142.0" stylesheets="@stylesheet.css" text="" textFill="WHITE" />
-            <TextField fx:id="captchaInput" layoutX="102.0" layoutY="242.0" prefHeight="40.0" prefWidth="142.0" promptText="Enter CAPTCHA" />
-            <Button id="sale" fx:id="login" layoutX="98.0" layoutY="304.0" mnemonicParsing="false" onMouseClicked="#onLoginButtonClick" prefHeight="39.0" prefWidth="150.0" stylesheets="@stylesheet.css" text="Login">
-               <font>
-                  <Font name="Algerian" size="17.0" />
-               </font>
-            </Button>
-         </children></AnchorPane>
-      <PasswordField fx:id="ftmot_de_passe" layoutX="141.0" layoutY="265.0" />
+      <ImageView fitHeight="440.0" fitWidth="705.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+         </image>
+      </ImageView>
       <TextField fx:id="ftemail" layoutX="141.0" layoutY="200.0" promptText="email" />
       <Label layoutX="58.0" layoutY="155.0" prefHeight="39.0" prefWidth="158.0" text="Veuillez saisir votre :">
          <font>
@@ -40,27 +35,30 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
+      <Button id="sale" fx:id="login" layoutX="129.0" layoutY="339.0" mnemonicParsing="false" onMouseClicked="#onLoginButtonClick" prefHeight="39.0" prefWidth="150.0" stylesheets="@stylesheet.css" text="Login">
+         <font>
+            <Font name="Algerian" size="17.0" />
+         </font></Button>
       <ToggleButton fx:id="toggleButton" layoutX="294.0" layoutY="265.0" mnemonicParsing="false" onAction="#toggleButton" opacity="0.0" prefHeight="26.0" prefWidth="20.0" text="Show" />
       <Label fx:id="ShownPassword" layoutX="172.0" layoutY="295.0" text="shown password" />
-      <AnchorPane layoutY="-129.0" prefHeight="240.0" prefWidth="849.0" style="-fx-background-color: #960000;">
+      <AnchorPane layoutX="-1.0" layoutY="-120.0" prefHeight="224.0" prefWidth="706.0" style="-fx-background-color: #960000;">
          <children>
-            <Label layoutX="319.0" layoutY="169.0" prefHeight="39.0" prefWidth="150.0" text="LOG IN" underline="true">
+            <Label layoutX="285.0" layoutY="164.0" prefHeight="39.0" prefWidth="150.0" text="LOG IN" underline="true">
                <font>
                   <Font name="Algerian" size="34.0" />
                </font>
             </Label>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="700.0" layoutY="101.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="570.0" layoutY="89.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
-
-            <Hyperlink layoutX="144.0" layoutY="492.0" onAction="#OnForget" onDragDetected="#opt" text="mot_de_passe oublié" />
-      <ImageView fitHeight="150.0" fitWidth="142.0" layoutX="567.0" layoutY="241.0" pickOnBounds="true" preserveRatio="true">
+      <Hyperlink layoutX="144.0" layoutY="385.0" onDragDetected="#opt" text="mot_de_passe oublié" />
+      <ImageView fitHeight="64.0" fitWidth="96.0" layoutX="628.0" layoutY="365.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@images/forgot-password%20(1).png" />
+            <Image url="@images/nourriture.png" />
          </image>
       </ImageView>
    </children>
