metier +api commit11

--- a/src/main/resources/ForgetPassword.fxml
+++ b/src/main/resources/ForgetPassword.fxml
@@ -65,5 +65,10 @@
             <Font name="Algerian" size="21.0" />
          </font>
       </Button>
+      <ImageView fitHeight="42.0" fitWidth="91.0" layoutX="767.0" layoutY="243.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/eye-clipart-transparent.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
