metier +api commit12

--- a/src/main/resources/Affichageutilisateurs.fxml
+++ b/src/main/resources/Affichageutilisateurs.fxml
@@ -16,7 +16,7 @@
    <children>
       <AnchorPane prefHeight="110.0" prefWidth="806.0" style="-fx-background-color: #960000;">
          <children>
-            <ImageView fitHeight="132.0" fitWidth="169.0" layoutX="658.0" layoutY="-18.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="103.0" fitWidth="141.0" layoutX="617.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/418025501_916964343338013_8117190284543088009_n.png" />
                </image>
@@ -32,7 +32,7 @@
          </children>
       </AnchorPane>
       <Label layoutX="123.0" layoutY="243.0" />
-      <TableView fx:id="tabutilisateurs" layoutX="14.0" layoutY="204.0" prefHeight="306.0" prefWidth="581.0">
+      <TableView fx:id="tabutilisateurs" layoutX="103.0" layoutY="188.0" prefHeight="306.0" prefWidth="560.0">
         <columns>
           <TableColumn fx:id="Nom" prefWidth="75.0" text="NOM" />
             <TableColumn fx:id="Prenom" prefWidth="93.60003662109375" text="PRENOM" />
@@ -41,11 +41,6 @@
             <TableColumn fx:id="actionCol" minWidth="0.0" prefWidth="127.99996337890627" text="ACTIONS" />
         </columns>
       </TableView>
-      <ImageView fitHeight="46.0" fitWidth="50.0" layoutX="14.0" layoutY="509.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/nourriture.png" />
-         </image>
-      </ImageView>
       <ImageView fitHeight="32.0" fitWidth="177.0" layoutX="628.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true" />
       <AnchorPane layoutX="165.0" layoutY="118.0" prefHeight="70.0" prefWidth="345.0">
          <children>
@@ -55,7 +50,7 @@
                   <Font name="Algerian" size="13.0" />
                </font>
                <graphic>
-                  <ImageView fitHeight="32.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="25.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@images/Capture%20d'écran%202024-03-04%20221045.png" />
                      </image>
@@ -64,28 +59,36 @@
             </Button>
          </children>
       </AnchorPane>
-      <Button layoutX="26.0" layoutY="137.0" mnemonicParsing="false" onAction="#OnAdd" prefHeight="32.0" prefWidth="118.0" text="NEW">
-         <font>
-            <Font name="Algerian" size="13.0" />
-         </font>
-      </Button>
       <Button layoutX="663.0" layoutY="132.0" mnemonicParsing="false" onAction="#OnSort" prefHeight="32.0" prefWidth="118.0" text="Sort Table">
          <font>
             <Font name="Algerian" size="13.0" />
          </font>
       </Button>
       <ComboBox fx:id="FilterComboBox" layoutX="521.0" layoutY="132.0" prefHeight="32.0" prefWidth="133.0" />
-      <Button layoutX="628.0" layoutY="325.0" mnemonicParsing="false" onAction="#OnExport" prefHeight="32.0" prefWidth="134.0" style="-fx-background-color: transaprent;">
+      <Button layoutX="663.0" layoutY="351.0" mnemonicParsing="false" onAction="#OnExport" prefHeight="32.0" prefWidth="134.0" style="-fx-background-color: transaprent;">
          <font>
             <Font name="Algerian" size="13.0" />
          </font>
-         <graphic>
-            <ImageView fitHeight="78.0" fitWidth="103.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/Capture%20d'écran%202024-03-04%20220636.png" />
-               </image>
-            </ImageView>
-         </graphic>
       </Button>
+      <ImageView fx:id="PdfImage" fitHeight="78.0" fitWidth="103.0" layoutX="687.0" layoutY="260.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/Capture%20d'écran%202024-03-04%20220636.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="25.0" layoutY="148.0" mnemonicParsing="false" onAction="#OnAdd" prefHeight="32.0" prefWidth="118.0" text="NEW">
+         <font>
+            <Font name="Algerian" size="13.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="46.0" fitWidth="50.0" layoutX="14.0" layoutY="496.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/nourriture.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="ExcelImage" fitHeight="78.0" fitWidth="88.0" layoutX="688.0" layoutY="367.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/Excel.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
