--- a/src/main/resources/AfficherCategorie.fxml
+++ b/src/main/resources/AfficherCategorie.fxml
@@ -57,16 +57,22 @@
                             </children>
                         </VBox>
                   <Button mnemonicParsing="false" onAction="#afficher_menu" text="Afficher Menu" />
+                  <HBox prefHeight="18.0" prefWidth="238.0" />
+                  <HBox prefHeight="43.0" prefWidth="238.0">
+                     <children>
+                        <VBox prefHeight="43.0" prefWidth="98.0" />
+                     </children>
+                  </HBox>
                     </children>
                 </VBox>
             </right>
             <center>
-                <ScrollPane fx:id="scroll" prefHeight="542.0" prefWidth="1022.0" style="-fx-background-color: transparent; -fx-background: transparent;" styleClass="transparent" BorderPane.alignment="CENTER">
+                <ScrollPane fx:id="scroll" prefHeight="407.0" prefWidth="890.0" style="-fx-background-color: transparent; -fx-background: transparent;" styleClass="transparent" BorderPane.alignment="CENTER">
                     <BorderPane.margin>
                         <Insets bottom="125.0" left="45.0" right="65.0" top="75.0" />
                     </BorderPane.margin>
                     <content>
-                        <GridPane fx:id="grid" prefHeight="65.0" prefWidth="39.0">
+                        <GridPane fx:id="grid" prefHeight="265.0" prefWidth="332.0">
                             <rowConstraints>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" />
                             </rowConstraints>
@@ -74,16 +80,6 @@
                     </content>
                 </ScrollPane>
             </center>
-            <top>
-                <HBox alignment="CENTER" prefHeight="58.0" prefWidth="1430.0" BorderPane.alignment="CENTER">
-                    <children>
-
-
-                        <Pane prefHeight="58.0" prefWidth="83.0" />
-                  <TextField fx:id="Chercher" prefHeight="26.0" prefWidth="300.0" />
-                    </children>
-                </HBox>
-            </top>
             <bottom>
                 <Pane prefHeight="114.0" prefWidth="1342.0" BorderPane.alignment="CENTER">
                     <children>
@@ -94,5 +90,6 @@
                 </Pane>
             </bottom>
         </BorderPane>
+      <TextField fx:id="Chercher" layoutX="10.0" layoutY="10.0" prefHeight="26.0" prefWidth="300.0" />
     </children>
 </AnchorPane>
