--- a/src/main/resources/AfficherMenu.fxml
+++ b/src/main/resources/AfficherMenu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
@@ -65,11 +66,12 @@
                                 <TextField fx:id="prix_menu" prefHeight="26.0" prefWidth="154.0" />
                             </children>
                         </HBox>
-                        <VBox alignment="CENTER" prefHeight="73.0" prefWidth="237.0">
+                        <VBox alignment="CENTER" prefHeight="20.0" prefWidth="238.0">
                             <children>
                                 <HBox alignment="CENTER" prefHeight="33.0" prefWidth="237.0" />
                             </children>
                         </VBox>
+                  <Button fx:id="like_dislike_button" mnemonicParsing="false" onAction="#like_dislike" prefHeight="26.0" prefWidth="53.0" text="like" />
                     </children>
                 </VBox>
             </right>
@@ -79,7 +81,7 @@
                         <Insets bottom="125.0" left="45.0" right="65.0" top="75.0" />
                     </BorderPane.margin>
                     <content>
-                        <GridPane fx:id="grid" prefHeight="125.0" prefWidth="114.0">
+                        <GridPane fx:id="grid" prefHeight="169.0" prefWidth="230.0">
                             <rowConstraints>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" />
                             </rowConstraints>
